objects/DM_Loan_Disbursal_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>DM_ACH_Filename__c</fullName>
        <label>ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
        <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM CL Contract</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
        <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Check</label>
        <referenceTo>loan__Check__c</referenceTo>
        <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
        <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Contribution_From_Excess__c</fullName>
        <inlineHelpText>Amount contributed from &apos;Excess&apos; towards Financed amount in this transaction. &apos;Excess&apos; is amount paid by borrower in excess in previous payments.</inlineHelpText>
        <label>Contribution From Excess</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_10__c</fullName>
        <label>DM Custom Field 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Funding Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Disbursal_Time__c</fullName>
        <label>Disbursal Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DM_Disbursed_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Disbursal Transaction Amount</description>
        <inlineHelpText>Disbursal Transaction Amount</inlineHelpText>
        <label>Disbursal Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Financed_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount to be disbursed to borrower.</inlineHelpText>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Internal_Accounting_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Accounting Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Disbursal_Transaction_Type__c</fullName>
        <label>Disbursal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Principal Adjustment - Add</fullName>
                </value>
                <value>
                    <fullName>DM_Regular</fullName>
                    <default>true</default>
                    <label>DM_Regular</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Loan_Snapshot__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Loan Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Number_Of_Interest_Only_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to give the number of interest only payments while doing last disbursal transaction</description>
        <label>Number Of Interest Only Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Pre_Paid_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the sum of all prepaid fees defined on the contract.</inlineHelpText>
        <label>Total Pre-Paid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Receipt_ID__c</fullName>
        <description>Receipt ID</description>
        <displayFormat>RID-{0000000000}</displayFormat>
        <inlineHelpText>Receipt ID</inlineHelpText>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DM_Reference__c</fullName>
        <label>Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Refinanced_Amount__c</fullName>
        <inlineHelpText>Sum of the pay-off amounts of refinanced loan accounts</inlineHelpText>
        <label>Total Refinanced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Sent_To_ACH_On__c</fullName>
        <inlineHelpText>This is the date the transaction was sent to ACH. The lock period for clearing is counted from this date.</inlineHelpText>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Sent_To_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dm_Disbursal_Date__c</fullName>
        <label>Dm Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dm_Mode_Of_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dm Mode Of Payment</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
        <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DM Loan Disbursal Transaction</label>
    <nameField>
        <label>DM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Loan Disbursal Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>